external-crates/move/crates/move-compiler/tests/sui_mode/one_time_witness/init_many_wrong_parameters.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: sui
  edition: legacy
  lint: false
---
error[Sui E02003]: invalid 'init' function
  ┌─ tests/sui_mode/one_time_witness/init_many_wrong_parameters.move:2:9
  │
2 │     fun init(_: who::X, _: who::Y, _: who::Z) {}
  │         ^^^^                       - 'init' functions can have at most two parameters
  │         │                           
  │         Invalid 'init' function declaration

error[E03002]: unbound module
  ┌─ tests/sui_mode/one_time_witness/init_many_wrong_parameters.move:2:17
  │
2 │     fun init(_: who::X, _: who::Y, _: who::Z) {}
  │                 ^^^ Unbound module alias 'who'

error[E03002]: unbound module
  ┌─ tests/sui_mode/one_time_witness/init_many_wrong_parameters.move:2:28
  │
2 │     fun init(_: who::X, _: who::Y, _: who::Z) {}
  │                            ^^^ Unbound module alias 'who'

error[E03002]: unbound module
  ┌─ tests/sui_mode/one_time_witness/init_many_wrong_parameters.move:2:39
  │
2 │     fun init(_: who::X, _: who::Y, _: who::Z) {}
  │                                       ^^^ Unbound module alias 'who'

error[Sui E02003]: invalid 'init' function
  ┌─ tests/sui_mode/one_time_witness/init_many_wrong_parameters.move:7:9
  │
7 │     fun init(_: Who, _: u64, _: &mut sui::tx_context::TxContext) {}
  │         ^^^^                 - 'init' functions can have at most two parameters
  │         │                     
  │         Invalid 'init' function declaration

error[E03004]: unbound type
  ┌─ tests/sui_mode/one_time_witness/init_many_wrong_parameters.move:7:17
  │
7 │     fun init(_: Who, _: u64, _: &mut sui::tx_context::TxContext) {}
  │                 ^^^ Unbound type 'Who' in current scope
